# database_datamarket_university

./: README.md
backend/: .gitignore  .surrealdb  .vimspector.json  Cargo.toml  deny.toml  env  start_query.sh  start_surreal.sh
backend/.cargo/: config.toml
backend/app/: Cargo.toml
backend/app/src/: graphql.rs  main.rs
backend/app/src/graphql/: mutation_root.rs  query_root.rs
backend/app/src/graphql/mutation_root/: measure_units_mutation.rs  pipe_mutation.rs  pipe_stats_mutation.rs  production_info_mutation.rs  production_plan_per_day_mutation.rs  sales_plan_per_day_mutation.rs  user_mutation.rs
backend/app/src/graphql/query_root/: measure_units_query.rs  pipe_query.rs  pipe_stats_query.rs  production_info_query.rs  production_plan_per_day_query.rs  sales_plan_per_day_query.rs  user_query.rs
backend/common/: Cargo.toml
backend/common/src/: ctx.rs  error.rs  lib.rs  mw_ctx.rs  mw_req_logger.rs  role.rs
backend/db/: Cargo.toml
backend/db/migrations/: 20240425_164504_initial.surql
backend/db/migrations/definitions/: 20240425_164504_initial.json
backend/db/schemas/: User.surql
backend/db/src/: db.rs
backend/service/: Cargo.toml
backend/service/src/service/: common.rs  datetime.rs  guard.rs  machinery.rs  machinery_type.rs  measure_units.rs  mod.rs  pipe.rs  pipe_from.rs  pipe_stats.rs  pipe_to.rs  pipe_type.rs  prod_populate.rs  production_info.rs  production_per_day.rs  raw_material.rs  sales_per_day.rs  thing_derived.rs  thing_wrapper.rs  user.rs  utils.rs
frontend/: .gitignore  env  houdini.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  client.ts  hooks.server.ts
frontend/src/lib/toast/: Actions.js
frontend/src/routes/: +layout.svelte
frontend/src/routes/(app)/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/dashboard/: +page.gql  +page.svelte  ProductionInfoStore.gddql
frontend/src/routes/(default)/login/: +page.svelte  LoginStore.gql
