[workspace]
members = [ 
  "app", "common", "db",
  "service"
]
resolver = "2"

#[profile.dev]
#opt-level = 1
#[profile.dev.package."*"]
#opt-level = 3

[workspace.dependencies]
async-graphql = {version= "6", features= ["playground", "dataloader", "opentelemetry", "tracing", "decimal"] }
async-graphql-axum = "6"
axum =  {version = "0.6", features = ["macros"]}
http = "0.2.11"
jsonwebtoken = "9"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.8" }

surrealdb = { version = "1.4.2" } 
surrealdb-migrations = "1.4.0"
rust_decimal = { version = "1.35" }
chrono = { version = "0.4", features = ["std", "alloc", "now"], default-features = false }

assert_fs = "1.1.1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9"
tower-http = { version = "0.4", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
argon2 = "0.5.3"
lazy_static = "1.4.0"
async-trait = "0.1.75"
mockall = "0.12.1"
include_dir = "0.7.3"
hashbrown = "0.14.3"
const_panic = "0.2.8"
color-eyre = "0.6.2"
cookie = "0.17.0"

petgraph = { version = "0.6.4" }

const_format = "0.2.32"
pretty_assertions = "1.4.0"

fake = "2.9.2"
rand = "0.8.5"

### Tracing
tracing-log = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"


opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
tracing-opentelemetry = "0.22"


# dev-deps
rstest = "0.18.2"
