[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum =  { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
lazy_static = { workspace = true }

common = { path = "../common" }
db = { path = "../db" }
service = { path = "../service" }

[dev-dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
