[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true }
axum =  { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true, features = ["sql2"] }
tower-cookies = { workspace = true }
uuid = { workspace = true }
mockall = { workspace = true }
fake = {workspace = true}
cookie = { workspace = true }


db = { path = "../db" }
# service = { workspace = true }

[dev-dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
