[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
surrealdb = { workspace = true, features = ["sql2"] }
lazy_static = { workspace = true }
surrealdb-migrations = { workspace = true } 
include_dir = {workspace = true}
tracing-log = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

assert_fs = { workspace = true }

[dev-dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
